--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
