--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.3.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.460.0",
@@ -19,8 +20,12 @@
     "react-dom": "^18.3.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
+    "react-swipeable": "^7.0.2",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.1.15",
     "zod": "^3.23.8"
   },
   "devDependencies": {
