--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
@@ -34,6 +36,7 @@
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
