--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/jsonwebtoken": "^9.0.7",
     "class-variance-authority": "^0.7.1",
