feat : - block or unblcok with socket added

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3001 --turbopack",
     "dev:network": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
@@ -13,13 +13,17 @@
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@ffmpeg/util": "^0.12.2",
     "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.7",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "@types/fluent-ffmpeg": "^2.1.27",
@@ -46,6 +50,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-swipeable": "^7.0.2",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
