--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
     "mongoose": "^8.9.4",
     "next": "15.0.3",
@@ -63,6 +65,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
