--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.3.0",
+    "@types/date-fns": "^2.5.3",
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jsonwebtoken": "^9.0.7",
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
@@ -48,6 +49,8 @@
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^18.3.0",
+    "react-date-range": "^2.0.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
@@ -68,6 +71,7 @@
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
