--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ffmpeg/util": "^0.12.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -25,8 +26,10 @@
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@radix-ui/themes": "^3.1.6",
     "@reduxjs/toolkit": "^2.3.0",
@@ -40,16 +43,20 @@
     "date-fns": "^3.6.0",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
+    "framer": "^2.4.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
+    "mediasoup-client": "^3.8.2",
     "mongoose": "^8.9.4",
+    "motion": "^12.4.7",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^18.3.0",
     "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.0",
     "react-hot-toast": "^2.4.1",
@@ -63,6 +70,7 @@
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1",
     "zod": "^3.23.8"
   },
