--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "file-saver": "^2.0.5",
+    "file-server": "^2.2.1",
     "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
     "framer": "^2.4.1",
