feat: speareted components

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-certificates
+certificates/c:/Users/donex/Desktop/streamrx-client/components/Live/studio
