--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.1.0",
     "react-day-picker": "^8.10.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
